AnimeStore/K8S-DEP/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anime
  template:
    metadata:
      labels:
        app: anime
    spec:
      containers:
      - name: anime
        image: moahmed101/animev1:storev1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
