AnimeStore/K8S-DEP/srv.yml
apiVersion: v1
kind: Service
metadata:
  name: anime-service
spec:
  selector:
    app: anime
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
