AnimeStore/K8S-DEP/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: anime-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: anime-service
            port:
              number: 80
      - path: /iteme
        pathType: Prefix
        backend:
          service:
            name: anime-service
            port:
              number: 80
